--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ stages:
    jobs: 
     - job: 'BuildJob'
       pool:
-        vmImage: 'ubuntu-latest'
+        vmImage: 'windows-2022'
 
       variables:
         solution: '**/*.sln'
@@ -48,7 +48,7 @@ stages:
    jobs:
      - job: 
        pool: 
-        vmImage: 'ubuntu-latest'
+        vmImage: 'windows-2022'
        steps:
         - task: DownloadPipelineArtifact@2
           inputs:
@@ -68,7 +68,7 @@ stages:
    jobs:
      - job: 
        pool: 
-        vmImage: 'ubuntu-latest'
+        vmImage: 'windows-2022'
        steps:
         - task: DownloadPipelineArtifact@2
           inputs:
