--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 # azure devops and jira
 trigger:
-- master
+- webhook: true
 
 resources:
  webhooks:
